# tasks

./: README.md
algorithms/: CMakeLists.txt  README.md
algorithms/search/: BinarySearch.cpp  LinearSearch.cpp  TernarySearch.cpp
algorithms/sorting/: BubbleSorting.cpp  CountingSorting.cpp  InsertionSorting.cpp  MergeSorting.cpp  QuickSorting.cpp  SelectionSorting.cpp  ShellSorting.cpp  StupidSorting.cpp
alignment/: CMakeLists.txt  main.cpp
data-structures/stack/: CMakeLists.txt  Stack.h  Test.cpp  Test.h  main.cpp
simple-string/: CMakeLists.txt  README.md  main.cpp
simple-string/include/: SimpleString.h
simple-string/source/: SimpleString.cpp
smart-pointers/: CMakeLists.txt  README.md
smart-pointers/source/: SharedPtr.cpp  UniquePtr.cpp
